@@ -38,7 +38,7 @@ $access['table'][2]['name']		= trans('nodes connection/disconnection');
 $access['table'][2]['allow_reg']	= '^nodeset$';
 
 $access['table'][3]['name']		= trans('finances management');
-$access['table'][3]['allow_reg']	= '^((tariff|customerassignment)(add|info|list|move|edit|del)|(payment)(add|del|edit|info|list)|(balance|customerbalance)(new|add|ok|del|list|)|(cashreg(list|add|edit|del|info))|(invoice|invoice(list|new|edit|del|note|report|paid))|(note|note(list|add|edit|del|paid))|number|export|print|cashimport|cashimportparser|cashpackagedel)$';
+$access['table'][3]['allow_reg']	= '^((tariff|customerassignment)(add|info|list|move|edit|del)|(payment)(add|del|edit|info|list)|(balance|customerbalance)(new|add|ok|del|list|)|(cashreg(list|info))|(invoice|invoice(list|new|edit|del|note|report|paid))|(note|note(list|add|edit|del|paid))|number|export|print|cashimport|cashimportparser|cashpackagedel)$';
 $access['table'][3]['privilege']	= 'finances_management';
 
 $access['table'][4]['name']    		= trans('configuration reload');
@@ -113,6 +113,9 @@ $access['table'][26]['privilege']	= 'hide_finances';
 
 $access['table'][27]['name']		= trans('reports');
 $access['table'][27]['privilege']	= 'reports';
+
+$access['table'][28]['name']		= trans('cash registry administration');
+$access['table'][28]['allow_reg']	= '^cashreg(add|edit|del)$';
 
 $access['table'][253]['name']		= trans('users edition and addition forbidden');
 $access['table'][253]['deny_reg']	= '^(user(add|del|edit|passwd))$';
